--- a/ReasonsToGoOutWIthMe.html
+++ b/ReasonsToGoOutWIthMe.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width"/>
-    <title></title>
-    <link href="/style.css" rel="stylesheet" type="text/css"/>
-    <script src="/script.js"></script>
+    <link href="forAida/style.css" rel="stylesheet" type="text/css"/>
+    <script src="forAida/script.js"></script>
 
 </head>
 <body>
