--- a/ReasonsToGoOutWIthMe.html
+++ b/ReasonsToGoOutWIthMe.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width"/>
     <link href="/forAida/style.css" rel="stylesheet" type="text/css"/>
     <script src="/forAida/script.js"></script>
 
@@ -10,10 +9,10 @@
 <body>
     <center>
         <div class="everything">
-            <h1>
-                Welcome to the Ultimate List of Reasons Why You Should Go Out with Me!
-            </h1>
-            <h2> Please don’t judge me too hard for being cheesy or a little cringe — it’s all part of the charm, right?</h2>
+            <h2>
+            </h2>
+            <h2>                 Welcome to the Ultimate List of Reasons Why You Should Go Out with Me! </br>
+                Please don’t judge me too hard for being cheesy or a little cringe — it’s all part of the charm, right?</h2>
             <h2> So without further ado, here's the first reason:</h2>
                <h2> 1. I’ve mastered the art of  your humour 😁</h2>
                
