--- a/ReasonsToGoOutWIthMe.html
+++ b/ReasonsToGoOutWIthMe.html
@@ -14,7 +14,7 @@
             <h2>                 Welcome to the Ultimate List of Reasons Why You Should Go Out with Me! </br>
                 Please don’t judge me too hard for being cheesy or a little cringe — it’s all part of the charm, right?</h2>
             <h2> So without further ado, here's the first reason:</h2>
-               <h2> 1. I’ve mastered the art of  your humour 😁</h2>
+               <h2> 1. I'm starting to acquire your sense of humor</h2>
                
             <audio controls hidden id="song">
                 <source src="song.mp3" type="audio/mpeg">
